add - 기본 Security 설정  (#3)
* add - Security 기본 설정

* add - 테스트 환경 설정

* feat - Package By Feature 로 프로젝트 구성 변경

* feat - query log 설정 및 Validate 설정

* feat - Validate 설정

* feat - 코드 수정

* feat - 회원 가입, 로그인 임시 개발

* feat - 공통 String Object 추가

* feat - 불필요 Import 제거

* feat - User Entity 및 controller, Service, Repository 이름 수정

* feat - Controller 회원가입 테스트

* feat - JwtRequestFilter add shouldNotFilter fun

* feat - Security Check