@@ -26,9 +26,21 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
 
-    // DB
+    // Validate
+    implementation("org.springframework.boot:spring-boot-starter-validation")
+
+    // Spring Security
+    implementation("org.springframework.boot:spring-boot-starter-security")
+    // JJWT
+    implementation("io.jsonwebtoken:jjwt:0.12.5")
+
+    // DB - MySql
     runtimeOnly ("com.mysql:mysql-connector-j")
+
+    // JPA
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    // jpa query logging
+    implementation("com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.1")
 
     // QueryDSL
     implementation("com.querydsl:querydsl-jpa:5.0.0:jakarta")
@@ -42,6 +54,9 @@ dependencies {
 
     // SWAGGER
     implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2")
+
+    // LOGGER
+    implementation("org.slf4j:slf4j-api:2.0.13")
 
 
     // TEST
@@ -58,5 +73,6 @@ tasks.withType<KotlinCompile> {
 }
 
 tasks.withType<Test> {
+    jvmArgs = listOf("-XX:+IgnoreUnrecognizedVMOptions", "-XX:+EnableDynamicAgentLoading")
     useJUnitPlatform()
 }
